# refboard

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release-updater.yml
src/: editor.html  floating.html  index.html  settings.html  sidebar-floating.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  overlay.rs
src/css/: assets-library.css  base.css  browser-homepage.css  floating.css  fonts.css  library.css  main.css  media-controls.css  modal.css  settings.css  settingsModal.css  sidebar-floating.css  sidebar.css  tabs.css  text-editor.css  titlebar.css  transitions.css  updater.css  views.css
src/js/: app.js  board-manager.js  canvas-objects.js  canvas.js  collection-manager.js  color-picker.js  editor.js  floating.js  font-dropdown.js  history-manager.js  library.js  main.js  media-controls.js  modal-utils.js  modal.js  settings-helper.js  settings.js  settingsModal.js  sidebar-floating.js  tab-bar.js  tab-manager.js  text-editor.js  themes.js  titlebar.js  update-ui.js  updater.js  view-manager.js
