[package]
name = "tauri_aref"
version = "1.5.0"
description = "Reference Board App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_aref_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

