[package]
name = "tauri_eyedea"
version = "2.2.0"
description = "EyeDea by AniHaven"
authors = ["n"]
edition = "2021"

[lib]
name = "tauri_eyedea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

