[package]
name = "EyeDea"
version = "1.0.5"
description = "EyeDea by AniHaven"
authors = ["n"]
edition = "2021"

[lib]
name = "tauri_eyedea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }

